[gd_scene load_steps=35 format=3 uid="uid://bvn7cqb6savp0"]

[ext_resource type="Texture2D" uid="uid://dv03u3qe6qh3f" path="res://Assets/Sprite/rat1.png" id="1_0lliu"]
[ext_resource type="Script" path="res://Rat/rat_independence.gd" id="1_d65gj"]
[ext_resource type="Texture2D" uid="uid://cqw72yu6whkqc" path="res://Assets/Sprite/Tiles/tile_0123.png" id="2_thesy"]
[ext_resource type="Texture2D" uid="uid://fn8n55fug510" path="res://Assets/Sprite/rat3.png" id="3_01oq6"]
[ext_resource type="Texture2D" uid="uid://cfxku0dkr51jp" path="res://Assets/Sprite/Tiles/tile_0124.png" id="3_g7nmb"]
[ext_resource type="Texture2D" uid="uid://f4p3jisyyha4" path="res://Assets/Sprite/rat4.png" id="6_6w8xp"]
[ext_resource type="Texture2D" uid="uid://cymdnfb7ccaom" path="res://Assets/Sprite/rat5.png" id="7_b6bcx"]
[ext_resource type="Texture2D" uid="uid://dgtc7oojywqgs" path="res://Assets/Sprite/Tiles/tile_0060.png" id="8_ab2qx"]
[ext_resource type="AudioStream" uid="uid://bag67btkepxvw" path="res://Assets/Sound/enchant.wav" id="10_bhrbx"]
[ext_resource type="AudioStream" uid="uid://b0fvvsml0ylvq" path="res://Assets/Sound/ratsqueak.wav" id="10_ovi4j"]
[ext_resource type="AudioStream" uid="uid://xfylvxyarjcw" path="res://Assets/Sound/scratching.wav" id="12_4d6fe"]
[ext_resource type="Texture2D" uid="uid://dt06nvtvrsdy1" path="res://Rat/pixel_style6.png" id="13_6wu1t"]
[ext_resource type="Texture2D" uid="uid://r4mcef51n1m4" path="res://Assets/Sprite/Tilemap/Spell_Capture_effect.png" id="13_bovso"]

[sub_resource type="Gradient" id="Gradient_ed1vy"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_30aea"]
gradient = SubResource("Gradient_ed1vy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dv3wh"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_30aea")

[sub_resource type="CircleShape2D" id="CircleShape2D_qmwgc"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7bq54"]
radius = 138.014

[sub_resource type="LabelSettings" id="LabelSettings_prr4m"]
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu5tv"]
atlas = ExtResource("13_bovso")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_03ndc"]
atlas = ExtResource("13_bovso")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1x27"]
atlas = ExtResource("13_bovso")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqorf"]
atlas = ExtResource("13_bovso")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgyjh"]
atlas = ExtResource("13_bovso")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnolu"]
atlas = ExtResource("13_bovso")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_43q2q"]
atlas = ExtResource("13_bovso")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urkl5"]
atlas = ExtResource("13_bovso")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3byy6"]
atlas = ExtResource("13_bovso")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4bukq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu5tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03ndc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1x27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqorf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgyjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnolu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43q2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urkl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3byy6")
}],
"loop": false,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="Animation" id="Animation_kp3wg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Emote:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.08, 0.08)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Emote:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5.97)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Emote:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_utkb1"]
resource_name = "Sprite_curious"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Emote:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [18, 13, 8]
}

[sub_resource type="Animation" id="Animation_qxome"]
resource_name = "Sprite_popdown"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Emote:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.09, 0.42), Vector2(0.13, 0.13)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Emote:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -15.33), Vector2(0, -6.325)]
}

[sub_resource type="Animation" id="Animation_gl0xm"]
resource_name = "Sprite_popup"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Emote:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.08, 0.08), Vector2(0.706, 0.986), Vector2(1.115, 1.115), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Emote:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -5.97), Vector2(0, -16.708), Vector2(0, -15.33)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7pc6o"]
_data = {
"RESET": SubResource("Animation_kp3wg"),
"Sprite_curious": SubResource("Animation_utkb1"),
"Sprite_popdown": SubResource("Animation_qxome"),
"Sprite_popup": SubResource("Animation_gl0xm")
}

[node name="RatIndependence" type="CharacterBody2D" groups=["rat"]]
scale = Vector2(2, 2)
collision_mask = 3
motion_mode = 1
script = ExtResource("1_d65gj")
rat_sprite_1 = ExtResource("1_0lliu")
rat_sprite_2 = ExtResource("3_01oq6")
rat_sprite_3 = ExtResource("2_thesy")
rat_sprite_4 = ExtResource("3_g7nmb")
rat_sprite_5 = ExtResource("6_6w8xp")
rat_sprite_6 = ExtResource("7_b6bcx")

[node name="DashParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_dv3wh")
texture = ExtResource("1_0lliu")
lifetime = 0.5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("8_ab2qx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qmwgc")

[node name="DetectionRadius" type="Area2D" parent="."]
scale = Vector2(0.8, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource("CircleShape2D_7bq54")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -25.0
offset_top = -48.0
offset_right = 26.0
offset_bottom = -25.0
text = "Follow"
label_settings = SubResource("LabelSettings_prr4m")

[node name="DetectedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ovi4j")
bus = &"SFX"

[node name="CaptureSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_bhrbx")
bus = &"SFX"

[node name="ScratchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_4d6fe")
bus = &"SFX"

[node name="RayCastNorth" type="RayCast2D" parent="."]
scale = Vector2(0.5, 0.5)
target_position = Vector2(0, -50)
collide_with_areas = true

[node name="RayCastEast" type="RayCast2D" parent="."]
scale = Vector2(0.5, 0.5)
exclude_parent = false
target_position = Vector2(50, 0)
collide_with_areas = true

[node name="RayCastSouth" type="RayCast2D" parent="."]
scale = Vector2(0.5, 0.5)
exclude_parent = false
collide_with_areas = true

[node name="RayCastWest" type="RayCast2D" parent="."]
scale = Vector2(0.5, 0.5)
exclude_parent = false
target_position = Vector2(-50, 0)
collide_with_areas = true

[node name="Timers" type="Node" parent="."]

[node name="DashTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Timer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="WanderingTimer" type="Timer" parent="Timers"]
wait_time = 10.0
one_shot = true

[node name="FollowTimer" type="Timer" parent="Timers/WanderingTimer"]

[node name="RaycastTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="DistanceTimer" type="Timer" parent="Timers"]
wait_time = 5.0
autostart = true

[node name="WaitTimer" type="Timer" parent="Timers"]

[node name="DashCooldownTimer" type="Timer" parent="Timers"]
wait_time = 1.5
one_shot = true

[node name="EmoteTimer" type="Timer" parent="Timers"]
wait_time = 0.6
one_shot = true

[node name="SpellEffect" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.325, 2.325)
sprite_frames = SubResource("SpriteFrames_4bukq")
autoplay = "default"
frame = 8
frame_progress = 1.0

[node name="Emote" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -5.97)
scale = Vector2(0.08, 0.08)
texture = ExtResource("13_6wu1t")
hframes = 5
vframes = 6
frame = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7pc6o")
}

[connection signal="body_entered" from="DetectionRadius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_detection_radius_body_exited"]
[connection signal="timeout" from="Timers/DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Timers/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timers/WanderingTimer" to="." method="_on_wandering_timer_timeout"]
[connection signal="timeout" from="Timers/WanderingTimer/FollowTimer" to="." method="_on_follow_timer_timeout"]
[connection signal="timeout" from="Timers/RaycastTimer" to="." method="_on_raycast_timer_timeout"]
[connection signal="timeout" from="Timers/DistanceTimer" to="." method="_on_distance_timer_timeout"]
[connection signal="timeout" from="Timers/WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="Timers/DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="Timers/EmoteTimer" to="." method="_on_emote_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
